@@ -1,3 +1,5 @@
+- PromiseCode example to interoperate with Promises - thanks @hitode909
+
 0.45 2021-01-27
 - Promise only needs then method - resolve/reject go via PromiseCode - thanks @hitode909 for prompt
 
